# fetchkit

./: Cargo.toml  LICENSE-MIT  rust-analyzer.toml  typos.toml
.github/workflows/: ci.yml  typos.yml
.zed/: settings.json
src/: error.rs  lib.rs  progress.rs  verify.rs
src/download/: http.rs  mirror.rs  mod.rs
src/extract/: mod.rs  tar.rs  zip.rs
tests/: extract_tests.rs
